完成了权限功能的开发

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,6 +5,7 @@ body,
     height:100%;
     margin:0;
     padding:0;
+    min-width: 1366px;
 }
 
 .el-breadcrumb{
@@ -14,8 +15,4 @@ body,
 
 .el-card{
     box-shadow: 0 10px 10px #333;
-}
-
-.el-row{
-    margin-bottom: 15px;
 }
